# app_with_parameters

./: .gitignore  AppWithParameters.aps  AppWithParameters.sln  AppWithParameters.vcxproj  AppWithParameters.vcxproj.filters  CMakeLists.txt  Readme.MD  helpers.cpp  helpers.h  main.cpp  resource.h
game/: Coordinate.cpp  Coordinate.h  Player.cpp  Player.h  Simulation.cpp  Simulation.h  World.cpp  World.h  types.h
graphics/: graphicstest.cpp  graphicstest.h  worldrenderer.cpp  worldrenderer.h
x64/Debug/: AppWithParameters.exe.recipe  AppWithParameters.ilk  AppWithParameters.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/AppWithP.8799794a.tlog/: AppWithParameters.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
